# contempart-reanalysis

./: .gitignore  README.md  main.py  pyproject.toml
R/: dbrda.R
archive/: README.md
archive/old_embeddings/: c_vectors_manifest.csv  image_manifest.csv
archive/old_results/: a_vectors_test_results.csv  (+5 more)
data/: README.md
results/: a_vectors_dbrda.csv  a_vectors_spread_by_school.csv  all_dbrda.csv  all_mantel_permanova.csv  all_social.csv  all_varpart.csv  c_vectors_test_results.csv  c_vectors_umap_data.csv  clip_b32_dbrda.csv  clip_b32_test_results.csv  clip_b32_varpart.csv  clip_l_dbrda.csv  clip_l_test_results.csv  clip_l_varpart.csv  comparison.md  csd_content_dbrda.csv  csd_content_test_results.csv  csd_content_varpart.csv  csd_style_dbrda.csv  csd_style_test_results.csv  csd_style_varpart.csv  dinov2_cls_dbrda.csv  dinov2_cls_test_results.csv  dinov2_cls_varpart.csv  dinov2_gram_dbrda.csv  dinov2_gram_test_results.csv  dinov2_gram_varpart.csv  dinov2_l12_dbrda.csv  dinov2_l12_metadata.csv  dinov2_l12_test_results.csv  dinov2_l12_varpart.csv  dinov2_style_dbrda.csv  dinov2_style_test_results.csv  dinov2_style_varpart.csv  goya_content_dbrda.csv  goya_content_test_results.csv  goya_content_varpart.csv  goya_style_dbrda.csv  goya_style_test_results.csv  goya_style_varpart.csv  (+23 more)
scripts/: make_readme_tables.py  run_all.py  setup_data.py  zenodo_publish.py
src/: build_distances.py  build_graph.py  plot_embeddings.R  registry.py  step0_init_report.py  step1_link.py  step2_statistics.py  step3_visualize.py  step4_graph.py
zenodo/: README.md  metadata.json
(+11 files in other folders)
