[project]
name = "contempart-reanalysis"
version = "0.1.0"
description = "Re-analysis of contempArt (Huckle 2020) across 16 embedding heads"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-bio>=0.7.2",
    "scipy>=1.14.0",
]

[tool.uv]
environments = ["sys_platform == 'darwin'"]
